# example

./: .cproject  .gitignore  .project  .ycm_extra_conf.py  BUILD.md  CMakeLists.txt  COPYRIGHT.md  LICENSE.md  Makefile  SDL  TODO.md  X11  cmake_install.cmake
data/meshes/: cube.mesh.json
doc/design/: .~lock.DesignDocument.odt#  CharEditor.vpp.bak_000f  DesignDocument.odt
doc/manual/: Doxyfile  main.md
doc/manual/css/: custom.css
main/: CMakeLists.txt
resources/meshes/: test.dae
src/: README.txt  bsEdit.cpp  test.cpp
src/bs/gr/: GLFWWrapper.hpp  Graphic.hpp  Mesh.hpp
src/bs/sys/: GLFWWrapper.cpp  IEvent.hpp  System.hpp  Types.h  bsIEvent.hpp  bsIEventConsumer.hpp
src/bs/ui/: uiNode.hpp  uiRect.cpp  uiRect.hpp  uiSignalHandler.hpp  uiWindow.hpp
src/bsEdit/: bsEdit.cpp
src/bsEdit/bs/gr/: GLProgram.hpp  GLShader.cpp  GLShader.hpp  Object.hpp  Storeable.hpp
src/bsEdit/bs/sys/: Event.hpp  GLFWWrapper.cpp  GLFWWrapper.hpp  Shader.cpp  Shader.hpp  ShaderManager.cpp  ShaderManager.h  System.h  WindowManager.cpp  WindowManager.hpp
src/bsEdit/bs/ui/: uiNode.hpp
src/examples/boost/python/: boost_python.cpp
src/examples/cppflags/: cppflags.cpp
src/examples/eigen/basic/: eigen_basic.cpp
src/examples/glad/: basic.c
src/examples/glfw/: glfw-init.c
src/examples/glfw_cpp/: .nvimlog  MeshLoader.hpp  glfw_cpp.cpp
src/examples/glfw_cpp/bs/game/: World.hpp
src/examples/glfw_cpp/bs/gr/: GLProgram.hpp  GLShader.cpp  GLShader.hpp  bsGLShader.hpp
src/examples/glfw_cpp/bs/sys/: GLFWWrapper.hpp  System.hpp  bsBaseTypes.hpp  bsIEventConsumer.hpp  bsSystem.cpp  bsSystem.hpp  bsSystemTypes.hpp
src/examples/glfw_cpp/bs/ui/: bsUINode.hpp  bsUIRect.cpp  bsUIRect.hpp  bsUISignalHandler.hpp  uiRect.cpp  uiRect.hpp
src/examples/nlohmann_json/: configuration.json  nlohmann_json.cpp
src/examples/nlohmann_json/basic/: nlohmann_json.cpp
src/examples/nlohmannjson/basic/: nlohmann_json.cpp
src/examples/python/basic/: python_basic.c
src/examples/zlib/: bsZlib.hpp  zlib.cpp
tools/: CMakeLists.txt
tools/build-configurations/boost/: user-config.jam
tools/cmake/: options.cmake  platform_linux.cmake  tools.cmake  versions.cmake
tools/cmake/modules/: bison_deps.cmake  boost_deps.cmake  bzip2_deps.cmake  flex_deps.cmake  freetype_deps.cmake  ftgl_deps.cmake  gettext_defs.cmake  gettext_deps.cmake  lib_boost.cmake  lib_boost_example_python.cmake  lib_clang_llvm.cmake  lib_cppflags.cmake  lib_cppflags_example_basic.cmake  lib_eigen.cmake  lib_eigen_example_basic.cmake  lib_glad.cmake  lib_glad_example_cbasic.cmake  lib_glfw.cmake  lib_glfw_example_cbasic.cmake  lib_glfw_example_cppbasic.make  lib_llvm.cmake  lib_nlohmann_json.cmake  lib_nlohmann_json_example_basic.cmake  lib_nlohmannjson.cmake  lib_nlohmannjson_example_basic.cmake  lib_python.cmake  lib_python_example_basic.cmake  lib_stbimage.cmake  lib_vmath.cmake  llvm_deps.cmake  openssl_def.cmake  openssl_deps.cmake  python_defs.cmake  python_deps.cmake  stb_image_deps.cmake  stb_image_write_deps.cmake  versions.cmake  zlma_deps.cmake
tools/patches/: boost_python3.7.patch
